--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="./heart.png">
 </head>
 <body>
-    <div class="birthdayCard">
+    <div class="birthdayCard" ontouchstart="">
         <div class="cardFront">
           <div class="front-text">
           <h3 class="happy">HAPPY</h3>
